--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             </div>
       
           <input type="text" placeholder="Search" id="searchBar">
-          <svg class="icons">
-            <use href="#searchIcon"></use>
+          <svg class="icons" id="search-icon">
+            <use href="#searchIcon" ></use>
           </svg>
         </div> <!-- End of the search field -->
 
@@ -54,6 +54,6 @@
       </symbol>
     </svg>
 
-    <script src="js/header.js"></script>
+    <script src="header.js"></script>
 </body>
 </html>
