--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <div id="logo">
             <h1>AcademiaWise</h1> <!-- This is the title -->
         </div>
-     
+
         <div class="search-field"> <!-- Beginning the search field -->
             <div class="close-icon">
-                <svg class="icons">
+                <svg class="icons" aria-label="close icon">
                     <use href="#closeIcon"></use>
                 </svg>
             </div>
       
           <input type="text" placeholder="Search" id="searchBar">
-          <svg class="icons" id="search-icon">
+          <svg class="icons" id="search-icon" aria-label="search icon">
             <use href="#searchIcon" ></use>
           </svg>
         </div> <!-- End of the search field -->
 
         <div class="profile-icon">
-            <svg class="icons">
+            <svg class="icons" aria-label="profile icon">
                 <use href="#profileIcon"></use>
             </svg>
         </div>
@@ -55,5 +55,6 @@
     </svg>
 
     <script src="header.js"></script>
+ 
 </body>
 </html>
