--- a/index.html
+++ b/index.html
@@ -33,9 +33,41 @@
             </svg>
         </div>
      </div> <!-- End of the first container in the header -->
+
+          <!-- Lower header container -->
+  <div class="lower-header">
+    <div class="add-question">
+      <svg class="icons" id="add-question-icon">
+        <use href="#addQuestionIcon"></use>
+      </svg>
+    </div>
+    <div class="notifications">
+      <svg class="icons" id="bell-icon">
+        <use href="#bellIcon"></use>
+      </svg>
+    </div>
+  </div>
+</header>
     </header>
+    <main></main>
      
     <!-- SVG icons definition -->
+
+
+    <svg>
+        <symbol id="bellIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+            <line x1="3" y1="3" x2="20" y2="20" stroke="black" stroke-width="2"/>
+        </symbol>
+          
+    </svg>
+
+     <svg>
+    <symbol id="addQuestionIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+        <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10" />
+    </symbol>
+     </svg>
+
     <svg style="display: none;">
       <symbol id="closeIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
         <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
