--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
         </div> <!-- End of the search field -->
 
         <div class="profile-icon">
+          <a href="sign.html">
             <svg class="icons" aria-label="profile icon">
                 <use href="#profileIcon"></use>
             </svg>
+          </a>
         </div>
         <div class="notifications">
           <svg class="icons" id="bell-icon">
