--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 
 
     <div class="add-question">
+      <a href="question.html">
       <svg class="icons" id="add-question-icon">
         <use href="#addQuestionIcon"></use>
       </svg>
+      </a>
     </div>
   </div>
     </header>
