--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
      <div class="header-container"> <!-- The first container in the header -->
         <div id="logo">
-            <h1>?Asknect</h1> <!-- This is the title -->
+            <h1>Asknect</h1> <!-- This is the title -->
         </div>
 
         <div class="search-field"> <!-- Beginning the search field -->
