--- a/sign.html
+++ b/sign.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="signin-container">
-    <h2>AcademiaWise</h2>
+    <h2>?Asknect</h2>
     <form id="signin-form">
         <div class="input-group">
             <input type="email" id="email" name="email" placeholder="Enter your email" required>
