--- a/signup.html
+++ b/signup.html
@@ -11,7 +11,7 @@
     <div id="container">
         <!-- Logo/Header -->
         <div class="first-row">
-            <h1>AcademiaWise</h1>
+            <h1>?Asknect</h1>
         </div>
 
         <!-- Icon and Title -->
