--- a/question.html
+++ b/question.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AcademiaWise Q&A</title>
+    <title>Asknect Q&A</title>
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/sidebar.css">
@@ -16,7 +16,7 @@
     <header>
      <div class="header-container"> <!-- The first container in the header -->
         <div id="logo">
-            <h1>AcademiaWise</h1> <!-- This is the title -->
+            <h1>Asknect</h1> <!-- This is the title -->
         </div>
 
         <div class="search-field"> <!-- Beginning the search field -->
