--- a/sign.html
+++ b/sign.html
@@ -14,10 +14,10 @@
     <h2>?Asknect</h2>
     <form id="signin-form">
         <div class="input-group">
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <input type="email" id="email" name="email" placeholder="Enter your email" required aria-label="Email Address">
         </div>
         <div class="input-group">
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            <input type="password" id="password" name="password" placeholder="Enter your password" required aria-label="Password">
         </div>
         <div id="error_message" style="color: red;">
 
